# course_work_3

./: 1.json  2.json  3.json  pyproject.toml
src/: main.py
src/services/: facade.py  graph.py  json_parser.py
