[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Kirill <pnchkirill@gmail.com>"]
readme = "README.md"
packages = [{ include = "course_work" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
ipython = "^8.17.2"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
